styles/globals.css
@font-face {
  font-family: "DM serif";
  src: url("/font/DMSerifDisplay-Italic.ttf") format("ttf"),
         url("/font/DMSerifDisplay-Regular.ttf") format("ttf");
 }
html,
body {
  padding: 0;
  margin: 0;
  font-family: "DM Serif", serif!important;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}
.react-multi-carousel-item {
  margin: 20px;
  width: 800px!important; 
}
.react-multi-carousel-list {
  overflow: overlay;
}
@media (max-width: 640px) {
  .react-multi-carousel-track, .react-multi-carousel-list {
    flex-direction: column!important;
  }
  .react-multi-carousel-item {
    margin: 20px;
    width: 100vw!important; 
  }
  .react-multiple-carousel__arrow {
    display: none;
  }
}



.accordion-button:not(.collapsed) {
  box-shadow: none!important;
  font-size: 18px;
}
.accordion-button {
  font-size: 18px!important;
}
.accordion-button, .accordion-body {
  padding: 40px 2% 40px 10%!important;
}
.accordion-body {
  background-color: #e7f1ff;
  font-size: 15px!important;
  padding: 2% 10%!important;
}

    /*  .ReactFlagsSelect-module_selectFlag__2q5gC {
        display: none!important;
      }   */
      .ReactFlagsSelect-module_label__27pw9 {
        font-size: 1em!important;
        color: #2400FD;
        padding: 5px 10px;     
      }     
      #rfs-btn {
        height: 50px!important;
        border: none!important;
      }
      .ReactFlagsSelect-module_selectBtn__19wW7::after {
        border-top: 5px solid #2400FD!important;  
          
    }
    .ReactFlagsSelect-module_selectBtn__19wW7[aria-expanded="true"]:after {
      border-bottom: 5px solid #2400FD!important;  
      border-top: 5px solid transparent!important;          
  }
  .ReactFlagsSelect-module_flagsSelect__2pfa2 {
    padding-bottom: 0px!important;
}

      @media screen and (max-width: 500px) { 
        .ReactFlagsSelect-module_selectOptions__3LNBJ {
          background: #2400FD!important;
           
        }
        .ReactFlagsSelect-module_label__27pw9 {
          font-size: 1em!important;
          color: white;  
          padding: 5px 10px!important;
        }
        #rfs-btn {
          padding: 0;
          height: 30px!important;
        }
        .ReactFlagsSelect-module_selectValue__152eS {
          padding: 0!important;
          margin: 0!important;
        }
        .ReactFlagsSelect-module_label__27pw9 {
          padding: 0;
        }
        .ReactFlagsSelect-module_selectBtn__19wW7::after {
          border-top: 5px solid white!important;        
      }
       }
        .ReactFlagsSelect-module_selectOptionValue__vS99- > .ReactFlagsSelect-module_label__27pw9 {
        font-size: 0.7em!important;
       }
       .footer-flags-mobile {
         width: 100px;
         margin: auto;
       }
      .footer-flags-mobile  .ReactFlagsSelect-module_label__27pw9 {
        color: #8F88BA;
      }
      .footer-flags {
       margin-top: 10px;
      }
      .footer-flags  .ReactFlagsSelect-module_label__27pw9 {
        color: #8F88BA;
      }
    
       .container-fluid {
         padding: 0!important;
       }
       .navbar-header {
        width: 100%;
        display: flex;
        padding: 25px 25px 15px;
        justify-content: space-between;
        border-bottom: 1px solid #2400FD16;
    }
    .btn-secondary {
      color: #fff;
      background-color: transparent!important;
      border-color: transparent!important;
  }
    .navbar-collapse {
      background: #2400FD;
      padding: 10px 20px;
      height: 100vh;
      position: fixed;
top: 0;
width: 100%;
z-index: 9999;
    }
    .navbar-brand-mobile {
      margin-bottom: 50px;
    }
    .navbar-toggle {
      height: 40px;
      margin-top: 15px;
    }
    .navbar-toggle-close {
      align-self: first baseline;
margin-top: 25px;
color: white!important;
    }
    .navbar-my-link {
      color: white!important;
      font-size: 24px!important;
      line-height: 31,25px;
      text-align: left!important;
    }
    .social-nav {
      display: flex;
      margin-top: 30px!important;
    }
.navbar-social-icon {
  margin: 0 10px;
}
    .navbar-credits-container {
      position: absolute;
      bottom: 5%;
    }
    .navbar-credits-link, .navbar-credits {
      color: white!important;
      font-size: 18px;
      line-height: 31,25px;
      text-align: left!important;
      margin-left: 0!important;
    }
    .navbar-jimmy-link {
      color: white!important;
      font-size: 18px;
      line-height: 25px;
      margin-left: 5px;
      text-decoration: none;
      opacity: 0.5;
    }

